# gamelib2

./: .gitignore  CMakeLists.txt  README.md  build  gamelib2.sln  gamelib2.vcxproj  gamelib2.vcxproj.filters  rebuild
Debug/gamelib2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  gamelib2.lastbuildstate
include/gamelib2/camera/: camera.cpp
include/gamelib2/compass/: compass.hpp
include/gamelib2/debug/: diagnostic.cpp  diagnostic.hpp  joystick.hpp
include/gamelib2/engine/: engine.hpp  framerate.cpp  framerate.hpp
include/gamelib2/game/: entity.hpp  game.cpp
include/gamelib2/graphics/: autotexture.cpp  autotexture.hpp  primitives.hpp
include/gamelib2/input/: device.cpp  device.hpp  input.hpp  keyboard.cpp  keycodes.hpp  xbox_gamepad.cpp
include/gamelib2/physics/: collisions.cpp
include/gamelib2/statemachine/: state.cpp  state.hpp  state_machine.cpp
include/gamelib2/utils/: file.hpp  files.hpp  grid.cpp  grid.hpp  timer.hpp
include/gamelib2/viewer/: viewer.cpp  viewer.hpp  viewer_utils.hpp
include/gamelib2/widgets/: label.cpp  label.hpp  sprite.hpp  spriteanimation.cpp  spriteanimation.hpp  tiledscrollingbackground.hpp  widget.hpp
src/: dll_export.hpp  types.hpp
src/camera/: camera.cpp  camera.hpp
src/compass/: compass.cpp  compass.hpp
src/debug/: diagnostic.cpp  diagnostic.hpp  joystick.cpp
src/engine/: engine.cpp  engine.hpp  framerate.cpp  framerate.hpp
src/game/: entity.cpp  entity.hpp  game.cpp  game.hpp
src/graphics/: autotexture.cpp  autotexture.hpp  primitives.cpp  primitives.hpp  renderable.cpp  renderable.hpp  sprite.cpp  sprite.hpp  tiledscrollingbackground.hpp
src/imgui/: imconfig.h  imgui-SFML.cpp
src/input/: controller.cpp  controller.hpp  device.cpp  device.hpp  input.hpp  keyboard.cpp  keyboard.hpp  keyboardlistener.cpp  keyboardlistener.hpp  xbox_gamepad.cpp  xbox_gamepad.hpp
src/math/: vector.cpp  vector.hpp
src/physics/: collisions.cpp  collisions.hpp
src/statemachine/: state.cpp  state.hpp  state_machine.cpp  state_machine.hpp
src/utils/: file.cpp  file.hpp  files.cpp  files.hpp  fps.hpp  grid.cpp  grid.hpp  timer.hpp
src/viewer/: mygui.cpp  mygui.hpp  viewer.cpp  viewer.hpp
src/widgets/: label.cpp  label.hpp  sprite.cpp  sprite.hpp  spriteanimation.cpp  spriteanimation.hpp  tiledscrollingbackground.cpp  tiledscrollingbackground.hpp  widget.cpp  widget.hpp
